fix: corrigi as informações

--- a/calop-agender.html
+++ b/calop-agender.html
@@ -107,8 +107,8 @@
           </div>
 
           <div class="feature-card">
-            <h3>Relatórios</h3>
-            <p>Análise completa de agendamentos e ocupação. Visualize métricas importantes para otimizar sua operação.</p>
+            <h3>Serviços</h3>
+            <p>Crie e gerencie serviços personalizados para o seu estabelecimento. Defina nomes, durações, preços e descrições detalhadas para cada serviço oferecido, facilitando a organização e a clareza para seus clientes.</p>
           </div>
         </div>
 
